--- a/CaRenatal/ui/post.html
+++ b/CaRenatal/ui/post.html
@@ -53,7 +53,7 @@
 					<span class="focus-input100"></span>
 				</div>
 
-				<div class="wrap-input100 validate-input" data-validate = "Mode number is required.">
+				<div class="wrap-input100 validate-input" data-validate = "Model number is required.">
 					<span class="label-input100">Model:</span>
 					<input class="input100" type="text" name="model" placeholder="Enter the model of the car">
 					<span class="focus-input100"></span>
