--- a/CaRenatal/ui/post.html
+++ b/CaRenatal/ui/post.html
@@ -80,7 +80,7 @@
 					<input class="input100" type="text" name="fuel type" placeholder="Enter the fuel type of the car"></input>
 					<span class="focus-input100"></span>
 				</div>
-				<div class="wrap-input100 validate-input" data-validate = "Fuel type is required">
+				<div class="wrap-input100 validate-input" data-validate = "Fuel usage is required">
 					<span class="label-input100">Fuel Usage:</span>
 					<input class="input100" type="text" name="fuel type" placeholder="Enter the fuel usage of the car"></input>
 					<span class="focus-input100"></span>
