--- a/CaRenatal/ui/index.html
+++ b/CaRenatal/ui/index.html
@@ -425,7 +425,7 @@
                                     <img src="../ui/assets/img/car-2.png" alt="">
                                 </div>
                                 <h3>LUXURY</h3>
-                                <p>A standard SUV offers flexibility, seating capacity and power for cruising around
+                                <p>A standard SUV offers flexibility, seating capacity, and power for cruising around
                                     town or your next adventure.</p>
                                 <a href="/gallery" class="prosper-btn">View All</a>
                             </div>
