Update links of index.html

--- a/CaRenatal/ui/index.html
+++ b/CaRenatal/ui/index.html
@@ -95,8 +95,9 @@
                                             solution for all Ethiopian customers who are
                                             looking to rent any type of car and to present there precious car for rent.
                                         </p>
-                                        <div class="wow fadeInUp" data-wow-delay="1.5s"><a href="/gallery"
-                                                class="prosper-btn menu-scroll-trigge">Book Now</a></div>
+                                        <div class="wow fadeInUp" data-wow-delay="1.5s">
+                                            <a href="Gallery.html" class="prosper-btn menu-scroll-trigge">Book Now</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -118,7 +119,7 @@
                                             solution for all Ethiopian customers who are
                                             looking to rent any type of car and to present there precious car for rent.
                                             <b>1992</b>.</p>
-                                        <a href="/gallery" class="prosper-btn menu-scroll-trigge">Book Now</a>
+                                        <a href="Gallery.html" class="prosper-btn menu-scroll-trigge">Book Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -140,7 +141,7 @@
                                             solution for all Ethiopian customers who are
                                             looking to rent any type of car and to present there precious car for rent.
                                             we have gained trust from many our customers.</p>
-                                        <a href="/gallery" class="prosper-btn menu-scroll-trigge">Book Now</a>
+                                        <a href="Gallery.html" class="prosper-btn menu-scroll-trigge">Book Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -319,7 +320,7 @@
                     <div class="join-team">
                         <i class="fa fa-plus"></i>
                         <p>Interested in any of the cars? Please hit the button below to Login or Sign up</p>
-                        <a href="/login" class="btn btn-default hvr-bounce-to-bottom">CLICK ME</a>
+                        <a href="login.html" class="btn btn-default hvr-bounce-to-bottom">CLICK ME</a>
                     </div>
                 </div>
             </div>
@@ -427,7 +428,7 @@
                                 <h3>LUXURY</h3>
                                 <p>A standard SUV offers flexibility, seating capacity, and power for cruising around
                                     town or your next adventure.</p>
-                                <a href="/gallery" class="prosper-btn">View All</a>
+                                <a href="Gallery.html" class="prosper-btn">View All</a>
                             </div>
                         </div>
                     </div>
@@ -442,7 +443,7 @@
                                 <h3>ECONOMY</h3>
                                 <p>A standard SUV offers flexibility, seating capacity and power for cruising around
                                     town or your next adventure.</p>
-                                <a href="/gallery" class="prosper-btn">View All</a>
+                                <a href="Gallery.html" class="prosper-btn">View All</a>
                             </div>
                         </div>
                     </div>
@@ -472,7 +473,7 @@
                                 <h3>SUV</h3>
                                 <p>A standard SUV offers flexibility, seating capacity and power for cruising around
                                     town or your next adventure.</p>
-                                <a href="/gallery" class="prosper-btn">View All</a>
+                                <a href="Gallery.html" class="prosper-btn">View All</a>
                             </div>
                         </div>
                     </div>
