--- a/CaRenatal/ui/whoweare.html
+++ b/CaRenatal/ui/whoweare.html
@@ -28,11 +28,12 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/index" class="smoothScroll">Home</a></li>
-          <li><a href="/index#feature" class="smoothScroll">Trust</a></li>
-          <li><a href="/gallery" class="smoothScroll">Cars</a></li>
-          <li><a href="/index#contact" class="smoothScroll">Contact Us</a></li>
-          <li><a href="/login" class="smoothScroll">Login</a></li>
+          <li><a href="index.html" class="smoothScroll">Home</a></li>
+          <li><a href="index.html#feature" class="smoothScroll">Trust</a></li>
+          <li><a href="Gallery.html" class="smoothScroll">Cars</a></li>
+          <li><a href="index.html#contact" class="smoothScroll">Contact Us</a></li>
+          <li><a href="login.html" class="smoothScroll">Login</a></li>
+  
 
         </ul>
       </div>
@@ -73,7 +74,7 @@
               all
               the difference to your journey. With The Exceptionals CARENTAL, you get access to a flexible rental
               solution for your business. Make a car rental reservation online now!</p>
-            <a href="/index" class="wheel-btn">Discover More</a>
+            <a href="index.html" class="wheel-btn">Discover More</a>
           </div>
         </div>
       </div>
