--- a/CaRenatal/ui/login.html
+++ b/CaRenatal/ui/login.html
@@ -58,7 +58,7 @@
 					</div>
 					
 					<div class="text-right p-t-8 p-b-31">
-						<a href="#">
+						<a href="forget.html">
 							Forgot password?
 						</a>
 					</div>
