--- a/CaRenatal/ui/whoweare.html
+++ b/CaRenatal/ui/whoweare.html
@@ -67,7 +67,7 @@
               family car, sedan or prestige car for your business or l
               eisure trips or need a van or truck for a job, our company has the vehicle to meet every car rental need.
               Make the most out of our large range of services to make
-              car rental experience a unique experience. Our free service Ready desk via online check-in is designed to
+              car rental experiences a unique experience. Our free service Ready desk via online check-in is designed to
               get you out on the road as soon as possible, it’s a free
               service available in most stations. If you want to indulge in a little luxury on a business trip or on
               vacation, you can rent our luxurious cars and can make
